0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.py:


NMR: reading TopSpin files (plugin)
=====================================

This example shows how to read Bruker TopSpin NMR files using the
optional ``spectrochempy-nmr`` plugin.

It also compares a simple public SpectroChemPy reconstruction of the raw
TopSpin FID against the bundled TopSpin processed reference spectrum.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 21-22

.. code-block:: default









.. GENERATED FROM PYTHON SOURCE LINES 24-28

.. code-block:: default

    import numpy as np

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 29-32

The recommended public reader lives under the ``scp.nmr`` plugin namespace.
The longer ``scp.nmr.read_topspin`` and top-level ``scp.read_topspin`` forms
remain available for compatibility.

.. GENERATED FROM PYTHON SOURCE LINES 32-41

.. code-block:: default


    fid = scp.nmr.read(
        scp.preferences.datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d",
        expno=1,
        remove_digital_filter=True,
    )
    print(f"Loaded raw FID: {fid}")
    print(f"Shape: {fid.shape}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Loaded raw FID: NDDataset: [complex128] count (size: 12411)
    Shape: (12411,)




.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plot the raw FID:

.. GENERATED FROM PYTHON SOURCE LINES 43-46

.. code-block:: default


    _ = fid.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin_001.png
   :alt: plot spectrochempy nmr  processing  nmr  plot read nmr topspin
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-48

Read the processed TopSpin reference spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 48-56

.. code-block:: default

    topspin = scp.nmr.read(
        scp.preferences.datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d",
        expno=1,
        procno=1,
    )
    print(f"Loaded processed TopSpin spectrum: {topspin}")
    print(f"Shape: {topspin.shape}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Loaded processed TopSpin spectrum: NDDataset: [complex128] count (size: 16384)
    Shape: (16384,)




.. GENERATED FROM PYTHON SOURCE LINES 57-67

Reconstruct the spectrum from the raw FID with the public API.

For this bundled TopSpin example, the processed reference uses:
- digital-filter correction on the FID;
- no exponential/sine-bell apodization (`LB=0`, `GB=0`, `SSB=0`);
- zero filling to `SI=16384`.

The FID metadata also carries TopSpin's stored phasing parameters, and the
public complex FFT path reuses that convention automatically for this direct
1D `QSIM` dataset.

.. GENERATED FROM PYTHON SOURCE LINES 67-69

.. code-block:: default

    spectrum = fid.fft(size=int(topspin.meta.si[0]))








.. GENERATED FROM PYTHON SOURCE LINES 70-72

Compare the reconstructed spectrum and the TopSpin processed reference on the
same ppm grid.

.. GENERATED FROM PYTHON SOURCE LINES 72-95

.. code-block:: default

    axis = np.asarray(topspin.x.data, dtype=float)
    ref = np.asarray(topspin.data).squeeze()
    calc = np.asarray(spectrum.data).squeeze()
    if axis[0] > axis[-1]:
        axis = axis[::-1]
        ref = ref[::-1]
        calc = calc[::-1]

    amplitude_scale = np.vdot(calc, ref) / np.vdot(calc, calc)
    maxabs_ratio = np.max(np.abs(ref)) / np.max(np.abs(calc))

    ref_norm = ref / np.max(np.abs(ref))
    calc_norm = calc / np.max(np.abs(calc))
    complex_overlap = np.abs(np.vdot(calc_norm, ref_norm)) / (
        np.linalg.norm(calc_norm) * np.linalg.norm(ref_norm)
    )
    real_corr = np.corrcoef(calc_norm.real, ref_norm.real)[0, 1]

    print(f"Complex overlap with TopSpin reference: {complex_overlap:0.6f}")
    print(f"Real-part correlation with TopSpin reference: {real_corr:0.6f}")
    print(f"Amplitude scale (calc -> TopSpin): {amplitude_scale.real:0.6f}")
    print(f"Amplitude ratio max|TopSpin|/max|calc|: {maxabs_ratio:0.6f}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Complex overlap with TopSpin reference: 0.999746
    Real-part correlation with TopSpin reference: 0.999792
    Amplitude scale (calc -> TopSpin): 1.000551
    Amplitude ratio max|TopSpin|/max|calc|: 0.999806




.. GENERATED FROM PYTHON SOURCE LINES 96-97

Overlay the real absorptive part against the TopSpin `1r` reference.

.. GENERATED FROM PYTHON SOURCE LINES 97-100

.. code-block:: default

    ax = topspin.real.plot(color="black")
    _ = spectrum.real.plot(ax=ax, clear=False, color="red")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin_002.png
   :alt: plot spectrochempy nmr  processing  nmr  plot read nmr topspin
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 101-102

The imaginary parts (`1i`-like channel) can also be compared directly.

.. GENERATED FROM PYTHON SOURCE LINES 102-105

.. code-block:: default

    ax = topspin.imag.plot(color="black")
    _ = spectrum.imag.plot(ax=ax, clear=False, color="red")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin_003.png
   :alt: plot spectrochempy nmr  processing  nmr  plot read nmr topspin
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 106-109

If the plugin is not installed, the function or method raises a
:class:`~spectrochempy.plugins.deps.MissingPluginError` with installation
instructions.

.. GENERATED FROM PYTHON SOURCE LINES 109-111

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.525 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.py <plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.ipynb <plot_spectrochempy_nmr__processing__nmr__plot_read_nmr_topspin.ipynb>`
